Added live map integration with dispatched logic